--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.1.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
